<resources>
    <string name="app_name">Monuments  Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_preferred">Preferred</string>
    <string name="menu_buddies">Buddies</string>
    <string name="menu_utilities">Weather</string>
    <string name="menu_info">Info</string>
    <string name="menu_light">Luminometer</string>
    <string name="menu_bar">Barometer</string>
    <string name="dwc_id" translatable="false">105816622111-oafmasr39uigquvs8383dnfu6sc44loi.apps.googleusercontent.com</string>
    <string name="owm_id" translatable="false">b011a7a5761de49fa493a4489d495a8d</string>

    <string name="owm_key" translatable="false">b011a7a5761de49fa493a4489d495a8d</string>

    <string name="action_settings">Settings</string>

    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>