<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_prefs"
            android:icon="@drawable/favorite"
            android:title="@string/menu_preferred" />
        <item
            android:id="@+id/nav_buddies"
            android:icon="@drawable/buddies"
            android:title="@string/menu_buddies" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_utilities"
            android:icon="@drawable/sun"
            android:title="@string/menu_utilities" />
    </group>
    <group
        android:id="@+id/menu_sensors"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/bulb"
            android:title="@string/menu_light" />

        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/pressure"
            android:title="@string/menu_bar" />
    </group>
    <group
        android:id="@+id/action_menu_divider"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/menu_info" />
    </group>
</menu>