<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.sapienza.macc_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_prefs"
        android:name="it.sapienza.macc_project.ui.preferred.PreferredFragment"
        android:label="@string/menu_preferred"
        tools:layout="@layout/fragment_preferred" />

    <fragment
        android:id="@+id/nav_buddies"
        android:name="it.sapienza.macc_project.ui.buddies.BuddiesFragment"
        android:label="@string/menu_buddies"
        tools:layout="@layout/fragment_buddies" >
        <action
            android:id="@+id/action_nav_buddies_to_nav_buddy"
            app:destination="@id/nav_buddy" />
    </fragment>
    <fragment
        android:id="@+id/nav_buddy"
        android:name="it.sapienza.macc_project.ui.buddies.CompassBuddyFragment"
        android:label="@string/menu_buddies"
        tools:layout="@layout/fragment_compassbuddy" />
    <fragment
        android:id="@+id/nav_utilities"
        android:name="it.sapienza.macc_project.ui.utilities.UtilitiesFragment"
        android:label="@string/menu_utilities"
        tools:layout="@layout/fragment_utilities" />
    <fragment
        android:id="@+id/nav_light"
        android:name="it.sapienza.macc_project.ui.lightsensor.LightSensorFragment"
        android:label="@string/menu_light"
        tools:layout="@layout/fragment_lightsensor" />
    <fragment
        android:id="@+id/nav_bar"
        android:name="it.sapienza.macc_project.ui.meteosensor.MeteoSensorFragment"
        android:label="@string/menu_bar"
        tools:layout="@layout/fragment_meteosensor" />
    <fragment
        android:id="@+id/nav_info"
        android:name="it.sapienza.macc_project.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>